; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_reverse_commit_list.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_reverse_commit_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_list = type { %struct.commit_list* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit_list* (%struct.commit_list*)* @reverse_commit_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit_list* @reverse_commit_list(%struct.commit_list* %0) #0 {
  %2 = alloca %struct.commit_list*, align 8
  %3 = alloca %struct.commit_list*, align 8
  %4 = alloca %struct.commit_list*, align 8
  %5 = alloca %struct.commit_list*, align 8
  store %struct.commit_list* %0, %struct.commit_list** %2, align 8
  store %struct.commit_list* null, %struct.commit_list** %3, align 8
  %6 = load %struct.commit_list*, %struct.commit_list** %2, align 8
  store %struct.commit_list* %6, %struct.commit_list** %4, align 8
  br label %7

7:                                                ; preds = %18, %1
  %8 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  %9 = icmp ne %struct.commit_list* %8, null
  br i1 %9, label %10, label %20

10:                                               ; preds = %7
  %11 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  %12 = getelementptr inbounds %struct.commit_list, %struct.commit_list* %11, i32 0, i32 0
  %13 = load %struct.commit_list*, %struct.commit_list** %12, align 8
  store %struct.commit_list* %13, %struct.commit_list** %5, align 8
  %14 = load %struct.commit_list*, %struct.commit_list** %3, align 8
  %15 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  %16 = getelementptr inbounds %struct.commit_list, %struct.commit_list* %15, i32 0, i32 0
  store %struct.commit_list* %14, %struct.commit_list** %16, align 8
  %17 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  store %struct.commit_list* %17, %struct.commit_list** %3, align 8
  br label %18

18:                                               ; preds = %10
  %19 = load %struct.commit_list*, %struct.commit_list** %5, align 8
  store %struct.commit_list* %19, %struct.commit_list** %4, align 8
  br label %7

20:                                               ; preds = %7
  %21 = load %struct.commit_list*, %struct.commit_list** %3, align 8
  ret %struct.commit_list* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
